Add data atributes to each clicked gamefield
Implemented improvment causing change of color on each clicked game field. It goes together with setting circle/cross data-atribute.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
    <div class="wrapper">
+      <button>Start</button>
       <div class="gameboard">
          <div class="field one">1</div>
          <div class="field two">2</div>
