--- a/index.html
+++ b/index.html
@@ -7,20 +7,48 @@
    <title>Circle and Cross App</title>
 
    <link rel="stylesheet" href="main.css">
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Smokum&display=swap" rel="stylesheet">
+
 </head>
 <body>
    <div class="wrapper">
-      <button>Start</button>
+      <h1 class="header">Ballon d'or</h1>
+      
+      <div class="starter">
+         <p>You need two players to play this game. It's a new version of tic-tac-toe. Change between players after each pick</p>
+         <button>Start</button>
+      </div>
+      <div class="result_messi">
+         <h2 class="announcement">The trophy goes to Argentina</h2>
+         <div class="img"></div>
+         <button class="restart">Reload the game</button>
+      </div>
+      <div class="result_ronaldo">
+         <h2 class="announcement">The trophy goes to Portugal</h2>
+         <div class="img"></div>
+         <button class="restart">Reload the game</button>
+      </div>
       <div class="gameboard">
-         <div class="field one">1</div>
-         <div class="field two">2</div>
-         <div class="field three">3</div>
-         <div class="field four">4</div>
-         <div class="field five">5</div>
-         <div class="field six">6</div>
-         <div class="field seven">7</div>
-         <div class="field eight">8</div>
-         <div class="field nine">9</div>
+
+         <div class="game_nav">
+            <div class="current_player_messi currently_playing"></div>
+            <div class="current_player_ronaldo currently_playing"></div>
+         </div>
+
+         <div class="field one"></div>
+         <div class="field two"></div>
+         <div class="field three"></div>
+         <div class="field four"></div>
+         <div class="field five"></div>
+         <div class="field six"></div>
+         <div class="field seven"></div>
+         <div class="field eight"></div>
+         <div class="field nine"></div>
       </div>
    </div>
 
