--- a/index.html
+++ b/index.html
@@ -20,24 +20,29 @@
       <h1 class="header">Ballon d'or</h1>
       
       <div class="starter">
-         <p>You need two players to play this game. It's a new version of tic-tac-toe. Change between players after each pick</p>
+         <p>You need two players to play this game. It's a new version of tic-tac-toe. Change between players after each pick. The one in golden frame will choose next</p>
          <button>Start</button>
       </div>
       <div class="result_messi">
          <h2 class="announcement">The trophy goes to Argentina</h2>
          <div class="img"></div>
-         <button class="restart">Reload the game</button>
+         <button class="restart messiBtn">Reload the game</button>
       </div>
       <div class="result_ronaldo">
          <h2 class="announcement">The trophy goes to Portugal</h2>
          <div class="img"></div>
-         <button class="restart">Reload the game</button>
+         <button class="restart ronaldoBtn">Reload the game</button>
+      </div>
+      <div class="result_draw">
+         <h2 class="announcement">It's a draw. Trophy goes to Messi</h2>
+         <div class="img"></div>
+         <button class="restart ronaldoBtn">Reload the game</button>
       </div>
       <div class="gameboard">
 
          <div class="game_nav">
-            <div class="current_player_messi currently_playing"></div>
-            <div class="current_player_ronaldo currently_playing"></div>
+            <div class="current_player_messi currently_playing "></div>
+            <div class="current_player_ronaldo"></div>
          </div>
 
          <div class="field one"></div>
